--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
-	"name": "DevDoodle",
-	"version": "0.0.0",
-	"description": "",
-	"main": "server.js",
-	"engines": {
-		"node": "0.10.x"
-	},
-	"dependencies": {
-		"cookie": "^0.1.2",
-		"mongodb": "^1.4.3",
-		"websocket": "~1.0.8",
-		"ws": "~0.4.31"
-	},
-	"devDependencies": {},
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node server.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/bjb568/DevDoodle.git"
-	},
-	"author": "DevDoodle",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/bjb568/DevDoodle/issues"
-	},
-	"homepage": "https://github.com/bjb568/DevDoodle"
+  "name": "DevDoodle",
+  "version": "0.0.0",
+  "description": "A programmers' network where you can do tutorials, ask questions, and create and share your own programs",
+  "main": "server.js",
+  "dependencies": {
+    "cookie": ">=0.1.2",
+    "nodemailer": ">=0.6.4",
+    "ws": ">=0.4.31",
+    "mongodb": ">=1.4.3"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "node server",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bjb568/DevDoodle.git"
+  },
+  "author": "DevDoodle",
+  "bugs": {
+    "url": "https://github.com/bjb568/DevDoodle/issues"
+  },
+  "homepage": "https://github.com/bjb568/DevDoodle"
 }
