--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "nodemailer": ">=1.3.2",
     "nodemailer-sendmail-transport": ">=1.0.0",
     "ws": ">=0.7.1",
-    "mongodb": ">=2.0.25"
+    "mongodb": ">=2.0.25",
+    "etag": ">=1.7.0"
   },
   "devDependencies": {},
   "repository": {
