--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
-  "name": "DevDoodle",
-  "version": "0.0.0",
-  "description": "A programmers' network where you can do tutorials, ask questions, and create and share your own programs.",
-  "main": "server.js",
-  "dependencies": {
-    "cookie": ">=0.1.3",
-    "nodemailer": ">=1.4.0",
-    "nodemailer-sendmail-transport": ">=1.0.0",
-    "ws": ">=0.7.2",
-    "mongodb": ">=2.0.39",
-    "etag": ">=1.7.0",
-    "uglify-js": ">=2.4.24",
-    "clean-css": "3.3.9"
-  },
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bjb568/DevDoodle.git"
-  },
-  "author": "DevDoodle",
-  "bugs": {
-    "url": "https://github.com/bjb568/DevDoodle/issues"
-  },
-  "homepage": "https://github.com/bjb568/DevDoodle",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "license": "ISC"
+	"name": "devdoodle",
+	"version": "0.0.0",
+	"description": "A programmers' network where you can do tutorials, ask questions, and create and share your own programs.",
+	"homepage": "https://devdoodle.net",
+	"bugs": "https://github.com/bjb568/DevDoodle/issues",
+	"license": "UNLICENSED",
+	"main": "essentials.js",
+	"author": "DevDoodle",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/bjb568/DevDoodle"
+	},
+	"dependencies": {
+		"cookie": "^0.2.0",
+		"nodemailer": "^1.4.0",
+		"nodemailer-sendmail-transport": "^1.0.0",
+		"ws": "^0.7.2",
+		"mongodb": "^2.0.39",
+		"etag": "^1.7.0",
+		"uglify-js": "^2.4.24",
+		"clean-css": "^3.3.9"
+	}
 }
