Add diff to package.json

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"etag": "^1.7.0",
 		"uglify-js": "^2.4.24",
 		"clean-css": "^3.3.9",
-		"ocsp": "^1.0.1"
+		"ocsp": "^1.0.1",
+		"diff": "^2.1.1"
 	}
 }
