Travis use addUser in mongo to work with 2.4

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ install:
 before_script:
   - mkdir ../Secret
   - echo "asdf" > ../Secret/devdoodleDB.key
-  - mongo DevDoodle --eval 'db.createUser({user:"DevDoodle",pwd:"asdf",roles:["readWrite"]});'
+  - mongo DevDoodle --eval 'db.addUser({user:"DevDoodle",pwd:"asdf",roles:["readWrite"]});'
 script: node server 8080 --nossl
