--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_script:
   - mkdir ../Secret
   - echo "asdf" > ../Secret/devdoodleDB.key
   - mongo DevDoodle --eval 'db.addUser({user:"DevDoodle",pwd:"asdf",roles:["userAdminAnyDatabase"]});'
-script: node server 8080 --nossl
+script: node server 8080 --nossl --test
