--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
 	"homepage": "https://devdoodle.net",
 	"bugs": "https://github.com/bjb568/DevDoodle/issues",
 	"license": "UNLICENSED",
-	"main": "essentials.js",
+	"main": "server.js",
+	"scripts": {
+		"start": "sudo node server",
+		"start-socket": "sudo node sockets",
+		"test": "node server 8080 --nossl --test"
+	},
 	"author": "DevDoodle",
 	"repository": {
 		"type": "git",
