--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ services:
 install:
   - npm install
   - npm install -g snyk
+  - npm install -g eslint
 script:
   - npm test
   - snyk test
+  - eslint ./
