--- a/.stylelintrc
+++ b/.stylelintrc
@@ -14,6 +14,7 @@
 		"function-name-case": "lower",
 		"function-parentheses-newline-inside": "never-multi-line",
 		"function-parentheses-space-inside": "never",
+		"function-url-no-scheme-relative": true,
 		"function-url-quotes": "always",
 		"function-whitespace-after": "always",
 		"number-leading-zero": "always",
@@ -53,14 +54,20 @@
 		"block-opening-brace-space-after": "always-single-line",
 		"block-opening-brace-space-before": "always",
 		"selector-attribute-brackets-space-inside": "never",
+		"selector-attribute-operator-space-after": "never",
+		"selector-attribute-operator-space-before": "never",
+		"selector-attribute-quotes": "always",
 		"selector-combinator-space-after": "always",
 		"selector-combinator-space-before": "always",
 		"selector-max-specificity": "3,3,3",
 		"selector-pseudo-class-case": "lower",
+		"selector-pseudo-class-no-unknown": true,
 		"selector-pseudo-class-parentheses-space-inside": "never",
 		"selector-pseudo-element-case": "lower",
 		"selector-pseudo-element-colon-notation": "double",
+		"selector-pseudo-element-no-unknown": true,
 		"selector-type-case": "lower",
+		"selector-type-no-unknown": true,
 		"selector-list-comma-newline-after": "always-multi-line",
 		"selector-list-comma-newline-before": "never-multi-line",
 		"selector-list-comma-space-after": "always-single-line",
@@ -79,14 +86,20 @@
 		"media-query-list-comma-space-before": "never",
 		"at-rule-empty-line-before": "never",
 		"at-rule-name-case": "lower",
+		"at-rule-name-space-after": "always",
+		"at-rule-no-unknown": true,
 		"at-rule-semicolon-newline-after": "always",
 		"comment-empty-line-before": "never",
 		"comment-whitespace-inside": "always",
 		"comment-word-blacklist": ["/^((?!\\bstylelint\\b)[\\s\\S])*$/"],
 		"indentation": "tab",
 		"max-empty-lines": 0,
+		"no-browser-hacks": true,
 		"no-duplicate-selectors": true,
+		"no-empty-source": true,
 		"no-eol-whitespace": true,
-		"no-invalid-double-slash-comments": true
+		"no-extra-semicolons": true,
+		"no-invalid-double-slash-comments": true,
+		"no-unknown-animations": true
 	}
 }
