--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,11 @@
 {
+    "plugins": [
+		"stylelint-csstree-validator",
+		"./node_modules/stylelint-no-browser-hacks/lib"
+	],
 	"rules": {
+        "csstree/validator": true,
+        "plugin/no-browser-hacks": true,
 		"color-hex-case": "lower",
 		"color-no-invalid-hex": true,
 		"font-family-name-quotes": "always-unless-keyword",
@@ -30,7 +36,6 @@
 		"value-list-comma-newline-before": "never-multi-line",
 		"value-list-comma-space-after": "always",
 		"value-list-comma-space-before": "never",
-		"custom-property-no-outside-root": true,
 		"shorthand-property-no-redundant-values": true,
 		"property-case": "lower",
 		"declaration-bang-space-after": "never",
@@ -40,7 +45,6 @@
 		"declaration-colon-space-before": "never",
 		"declaration-no-important": true,
 		"declaration-block-no-duplicate-properties": true,
-		"declaration-block-no-ignored-properties": true,
 		"declaration-block-no-shorthand-property-overrides": true,
 		"declaration-block-semicolon-newline-before": "never-multi-line",
 		"declaration-block-semicolon-space-after": "always-single-line",
@@ -72,11 +76,9 @@
 		"selector-list-comma-newline-before": "never-multi-line",
 		"selector-list-comma-space-after": "always-single-line",
 		"selector-list-comma-space-before": "never",
-		"rule-nested-empty-line-before": "never",
-		"rule-non-nested-empty-line-before": "never",
+		"rule-empty-line-before": "never",
 		"media-feature-colon-space-after": "always",
 		"media-feature-colon-space-before": "never",
-		"media-feature-no-missing-punctuation": true,
 		"media-feature-range-operator-space-after": "always",
 		"media-feature-range-operator-space-before": "always",
 		"media-feature-parentheses-space-inside": "never",
@@ -94,7 +96,6 @@
 		"comment-word-blacklist": ["/^((?!\\bstylelint\\b)[\\s\\S])*$/"],
 		"indentation": "tab",
 		"max-empty-lines": 0,
-		"no-browser-hacks": true,
 		"no-duplicate-selectors": true,
 		"no-empty-source": true,
 		"no-eol-whitespace": true,
