--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
 		"url": "https://github.com/bjb568/DevDoodle"
 	},
 	"dependencies": {
+		"clean-css": "^4.1.9",
 		"colors": "^1.1.2",
-		"yield-yield": "^1.0.1",
-		"http2": "^3.3.4",
 		"cookie": "^0.3.1",
-		"ws": "^2.2.2",
-		"mongodb": "^2.2.0",
-		"uglify-js": "^2.7.0",
-		"clean-css": "^4.0.10",
-		"diff": "^3.0.0"
+		"diff": "^3.3.1",
+		"http2": "^3.3.7",
+		"mongodb": "^2.2.31",
+		"uglify-js": "^3.1.3",
+		"ws": "^3.2.0",
+		"yield-yield": "^1.0.1"
 	},
-    "devDependencies": {
-        "stylelint-csstree-validator": "^1.1.1",
-        "stylelint-no-browser-hacks": "^1.0.2"
-    }
+	"devDependencies": {
+		"stylelint-csstree-validator": "^1.2.0",
+		"stylelint-no-browser-hacks": "^1.1.0"
+	}
 }
